Bug 1638478 - Try to resolve Script=Common runs to a specific script for shaping purposes based on the ScriptExtensions property. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D75744